--- a/MS3/Reports/contact-form-20/css/style.css
+++ b/MS3/Reports/contact-form-20/css/style.css
@@ -69,7 +69,7 @@ a {
   border-radius: 30px !important; }
   .btn.btn-primary {
     border-radius: 30px;
-    background: #4d80e4;
+    background: hsl(220, 47%, 32%);
     color: #fff;
     -webkit-box-shadow: 0 15px 30px 0 rgba(77, 128, 228, 0.2);
     box-shadow: 0 15px 30px 0 rgba(77, 128, 228, 0.2); }
